# sherpa-onnx

./: Cargo.toml
sherpa-onnx/rust/sherpa-onnx/: Cargo.toml
sherpa-onnx/rust/sherpa-onnx-sys/: Cargo.toml  build.rs
